force-app/main/default/objects/TimeCard__c/TimeCard__c.object-meta.xml
<CustomObject>
    <label>Time Card</label>
    <nameField>
        <displayFormat>TC{0000}</displayFormat>
        <label>Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>