force-app/main/default/objects/TimeCard__c/fields/IncurredBy__c.field-meta.xml
<CustomField>
    <fullName>IncurredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IncurredBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>