force-app/main/default/objects/TimeCard__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Milestone1_Project__c</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>