force-app/main/default/objects/TimeCard__c/fields/ProjectCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ProjectCostCenter__c</fullName>
    <label>Project Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YOU - DE</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>