force-app/main/default/objects/TimeCard__c/fields/ProjectTask__c.field-meta.xml
<CustomField>
    <fullName>ProjectTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>