force-app/main/default/objects/TimeCard__c/fields/ReportingType__c.field-meta.xml
<CustomField>
    <fullName>ReportingType__c</fullName>
    <label>Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Billable Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>