force-app/main/default/objects/TimeCard__c/fields/TCExtId__c.field-meta.xml
<CustomField>
    <fullName>TCExtId__c</fullName>
    <externalId>true</externalId>
    <label>TC Ext Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>