force-app/main/default/objects/TimeCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Hours__c</columns>
    <columns>Invoice__c</columns>
    <columns>Resource__c</columns>
    <columns>InvoiceTemplate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>